Search Property functionality
1) Searching property in a particular area
2) Listing of prices in ascending order.
3) Config.property update with homepage_title key.
4) log4j.property for file appender changed to true.
5) removed testdata.xlsx and  added zoopla_UK_data.xlsx for data driven
testing.

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,18 +1,24 @@
 url=https://zoopla.co.uk
 username=utkal234
 password=utkal@123
+
 # wndows, mac, linux
 OS=windows
+
 # chrome, firefox, edge, headless
 browser=chrome
 isrpoerterLogRequired=false
 sheetname=data
-excelfilepath=/src/main/java/com/freecrm/qa/testdata/zoopla_UK_data.xlsx
-chromepath=D:/Software/JARS/executables/chromedriver.exe
-geckopath=D:/Software/JARS/executables/geckodriver.exe
+excelfilepath=/src/test/resources/zoopla_UK_data.xlsx
 log4jConfPath = \\src\\main\\resources\\log4j.properties
+rpoerterLogStatus=true
+
+# DB Configuration
 db_class=com.mysql.jdbc.Driver
 db_username=utkal
 db_password=utkal@123
 DB_SERVER_IPdb_server_ip=127.0.0.1
 DB_SERVER_PORTdb_server_ip=8080
+
+# web page validation properties
+homepage_title=Zoopla > Search Property to Buy, Rent, House Prices, Estate Agents
