--- a/src/main/resouces/Log4j.properties
+++ b/src/main/resouces/Log4j.properties
@@ -10,10 +10,9 @@ log4j.appender.console.layout.ConversionPattern=%d{MM-dd-yyyy HH:mm:ss} %F %-5p 
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.File=ZooplaUK.log
 
-
 # Defining maximum size of a log file
 log4j.appender.file.MaxFileSize=10mb 
 log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout  
 log4j.appender.file.layout.ConversionPattern=%d{ISO8601} %5p [%t] %c{1}:%L - %m%n
-log4j.appender.file.Append=false
+log4j.appender.file.Append=true
