Test implementation for verifying agent from property page completed.
1) added key value paid for dropDownValue=100.
2) More debug log from ListebnersLib.java
3) openAnyPropAndVerifyAgentDetailsTest test completed
4) Added new methods, splitAndExtractID for extracting ID.

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -6,7 +6,7 @@ password=utkal@123
 OS=windows
 
 # chrome, firefox, edge, headless
-browser=chrome
+browser=firefox
 isrpoerterLogRequired=false
 sheetname=data
 excelfilepath=/src/test/resources/zoopla_UK_data.xlsx
@@ -22,3 +22,6 @@ DB_SERVER_PORTdb_server_ip=8080
 
 # web page validation properties
 homepage_title=Zoopla > Search Property to Buy, Rent, House Prices, Estate Agents
+
+# how many properties will be shown on search page. This is global value i.e. will be used for all pages.
+dropDownValue=100
