--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -6,7 +6,7 @@ password=utkal@123
 OS=windows
 
 # chrome, firefox, edge, headless
-browser=firefox
+browser=chrome
 isrpoerterLogRequired=false
 sheetname=data
 excelfilepath=/src/test/resources/zoopla_UK_data.xlsx
