Extent report added,
1) Listners added.
2) Better logging
3) DriverManager.java and InitializeDriver for code optimization.

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -5,12 +5,15 @@ password=utkal@123
 # wndows, mac, linux
 OS=windows
 
+# local - for exection on same system or, remote - for grid
+runtype=local
+# Remote machone URl i case of Grid execution
+RemoteURL=http://localhost:4444/wd/hub
 # chrome, firefox, edge, headless
 browser=chrome
 isrpoerterLogRequired=false
 sheetname=data
 excelfilepath=/src/test/resources/zoopla_UK_data.xlsx
-log4jConfPath = \\src\\main\\resources\\log4j.properties
 rpoerterLogStatus=true
 
 # DB Configuration
@@ -25,3 +28,8 @@ homepage_title=Zoopla > Search Property to Buy, Rent, House Prices, Estate Agent
 
 # how many properties will be shown on search page. This is global value i.e. will be used for all pages.
 dropDownValue=100
+
+# Related to Extent Report configuration
+isSuccessScreenShotRequired=yes
+isFailedScreenShotRequired=yes
+isSkippedScreenShotRequired=no
