--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.7</maven.compiler.source>
-		<maven.compiler.target>1.7</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 
 	<!-- properties> <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> 
@@ -47,7 +47,7 @@
 			<artifactId>log4j-api</artifactId>
 			<version>2.13.0</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
@@ -103,6 +103,13 @@
 			<version>1.0-beta</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+		<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+		<!-- dependency> <groupId>com.aventstack</groupId> <artifactId>extentreports</artifactId> 
+			<version>4.0.9</version> </dependency -->
+
+
+		<!-- https://mvnrepository.com/artifact/com.relevantcodes/extentreports -->
 		<dependency>
 			<groupId>com.relevantcodes</groupId>
 			<artifactId>extentreports</artifactId>
