Image Disabled logic and parallel execution
1) Intializedriver.java for disableChromeImage and disableFirefoxDriver
methods.
2) testng.xml for parallel execution.

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -11,10 +11,11 @@ runtype=local
 RemoteURL=http://localhost:4444/wd/hub
 # chrome, firefox, edge, headless
 browser=chrome
-isrpoerterLogRequired=false
 sheetname=data
 excelfilepath=/src/test/resources/zoopla_UK_data.xlsx
-rpoerterLogStatus=true
+reporterLogStatus=true
+# Image loading disabled will speedup test execution
+isImageLoadingDisabled=true
 
 # DB Configuration
 db_class=com.mysql.jdbc.Driver
